--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   background-image: url(assets/mobile-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   color: white;
 }
