--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   background-image: url(assets/mobile-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   color: white;
 }
@@ -94,6 +94,7 @@ body {
   .cta-button {
     width: 186px;
     height: 44px;
+    margin-top: -30px;
   }
 }
 @media screen and (min-width: 1920px) {
